--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@ h1{
    background-color: blue;
    padding: 20px;
 } 
+p{
+background-color:#eee;
+color:black;
+padding:20px;
+border:10px blue solid;
+font-size: 30px;
+font-weight: bold;
+}
