changes after connection with GitHub

--- a/style.css
+++ b/style.css
@@ -11,3 +11,17 @@ border:10px blue solid;
 font-size: 30px;
 font-weight: bold;
 }
+div{
+    background-color:#eeeeee36;
+    color:black;
+    padding:20px;
+    height:155px;
+    width:155px;
+    border-radius: 50% 50%;
+    border:10px red solid;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+
+}
